syntax = "proto3";

package com.bht.parkingmap.api.parkinglot;
option java_generic_services = true;
option java_multiple_files = true;

message ParkingLot {
    int64 id = 1;
    string name = 2;
    int32 type = 3;
    double latitude = 4;
    double longitude = 5;
    string openingHour = 6;
    string closingHour = 7;
    string lastUpdated = 8;
    double distance = 9;
}

message ParkingLotScanningByRadius {
    double latitude = 1;
    double longitude = 2;
    int32 radiusToScan = 3;
}

message ParkingLotScanningInRegion {
    double northEastLat = 1;
    double northEastLng = 2;
    double southWestLat = 3;
    double southWestLng = 4;
}

message ParkingLotList {
    repeated ParkingLot parkingLot = 1;
}

service ParkingLotService {
    rpc getAllParkingLotCurrentlyWorkingByRadius (ParkingLotScanningByRadius) returns (ParkingLotList);
    rpc getAllParkingLotCurrentlyWorkingInRegion (ParkingLotScanningInRegion) returns (ParkingLotList);
}